syntax = "proto3";
package rest;

import "api/common/common.proto";

option go_package = "github.com/wilenceyao/humor-svr/api/rest";

message TtsRequest {
    common.BaseRequest request = 1;
    string DeviceID = 2;
    string Text = 3;
}

message TtsResponse {
    common.BaseResponse response = 1;
}