syntax = "proto3";
package mqtt;
option go_package = "github.com/wilenceyao/humor-api/api/mqtt";

import "proto/common/common.proto";

enum Action {
    // [1, 1000] api -> agent
    NONE = 0;
    TTS = 1;
    // [1001, 2000] agent -> api
}

message RequestMessage {
    string traceID = 1;
    Action action = 2;
    bytes payload = 3;
}

message ReplyMessage {
    string traceID = 1;
    Action action = 2;
    bytes payload = 3;
    // RPC系统错误
    common.ErrorCode code = 4;
    string msg = 5;
}

message BaseReply {
   common.ErrorCode code = 1;
   string msg = 2;
}

message TtsRequest {
    string text = 1;
}

message TtsReply {
    BaseReply reply = 1;
}